# bazel_repo_build_overwrite_repro

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  file.BUILD.bazel  main.cc
